# TrialVTK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  build.bat  build_vtk.bat  build_win2017.bat  build_win2019.bat  set-hooks.sh
MiniMim/: CMakeLists.txt
MiniMim/App/: .clang-format  CMakeLists.txt  Minimim.bat.in  app.cxx  app.hpp  app.ui  filedialog.cxx  main.cxx
MiniMim/SlicerWidget/: CMakeLists.txt  SlicerWidget.bat.in  datamanager.cpp  datamanager.h  datamanager_old.cpp  reslicecallback.h
Picking/: CMakeLists.txt  TestPickingManager.cxx
QuickDockExample/QuickDockExample/: CMakeLists.txt  main.cpp  qmlplot.cpp  qmlplot.h
QuickDockExample/QuickDockExample/res/: CMakeLists.txt  qml.qrc
QuickDockExample/QuickDockExample/res/qml/: main.qml
QuickExample/: CMakeLists.txt
QuickExample/QuickExample/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  main.hpp
QuickExample/QuickExample/res/: qml.qrc
QuickExample/QuickExample/res/qml/: main.qml
QuickExample/viewcore/: CMakeLists.txt  CanvasHandler.cpp  CanvasHandler.h  CommandModel.h  CommandModelAdd.cpp  CommandModelAdd.h  CommandModelTranslate.cpp  CommandModelTranslate.h  Model.cpp  Model.h  ProcessingEngine.cpp  ProcessingEngine.h  config.h.in  eventhandler.hpp  fbo.cxx  fbo.hpp  renderer.cxx  renderer.hpp  view.cxx  view.hpp  window.cxx
Registration/: CMakeLists.txt
Registration/MI/: CMakeLists.txt  main.cpp  mattes.cpp
Registration/Registration/: CMakeLists.txt  QRangeSlider.cpp  QRangeSlider.hpp  SeedWidgetImage.cxx  SegRunner.cpp  SegRunner.hpp  SurfRunner.cpp  SurfRunner.hpp  TODO  app.cxx  app.hpp  app.ui  config.h.in  filedialog.cxx  getdata.cpp  main.cxx  regmanager.cpp  regmanager.h  reslicecallback.h  runnable.cpp  runnable.hpp  seedcallback.h  superslider.cpp  superslider.h  transformmodel.cpp  transformmodel.h  utils.hpp  vtk2itk.cpp
Registration/Segmentation/: CMakeLists.txt  segm.cxx
Registration/Surfacing/: CMakeLists.txt  surf.cxx
Registration/python/: LiverView.py  PlaneWidget.py  README.md  VesselReg_App.py  VesselReg_App_Qt_VTK.ui  cmdVesselSurf.py  itkComponentType.py  nb.sh  o3d.py  plot_region_growing.ipynb  refPlaneShow.py  refPlanesShow.py  reslice.py  vesselCut.py  vesselCut2Plane.py  vesselInspect.py  vesselSeg.py  vesselShow.py  vesselSurf.py  vesselplane.pcd  vesseltree.pcd  vtkICPtest.py  vtkUtils.py
SlicerWidget/: CMakeLists.txt
SlicerWidget/SlicerWidget/: CMakeLists.txt  app.cxx  app.hpp  app.ui  datamanager.cpp  datamanager.h  datamanager.ui  filedialog.cxx  main.cxx  reslicecallback.h
WidgetExample/: CMakeLists.txt
WidgetExample/WidgetExample/: CMakeLists.txt  FileDialog.cxx  FileDialog.hpp  app.cxx  app.hpp  app.ui  filedialog.cxx  filedialog.hpp  main.cpp  main.cxx
cmake/: deploy_qt_windows.cmake  deploy_vtk_windows.cmake
doc/: patent.tex  readme.md  segreg.md
python/: ipw_test.py
